--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'M PLUS Rounded 1c', sans-serif;
-    color: blueviolet;
+    color:aqua;
 }
 .contaner {
     max-width: 800px;
